# python-swarm-sdks

./: .env.example  .gitignore  MANIFEST.in  Makefile  README.md  pyproject.toml
.github/workflows/: publish.yaml
docs/: cross_chain_access_sdk_api.md  cross_chain_access_sdk_doc.md  market_maker_sdk_api.md  market_maker_sdk_doc.md  trading_sdk_doc.md  trading_sdk_references.md
examples/: example_cross_chain_access.py  example_error_handling.py  example_market_maker.py  example_rpq_updated.py  example_trading.py
libs/_shared/: config.py  constants.py  remote_config.py  swarm_auth.py
libs/_shared/web3/: exceptions.py  helpers.py
libs/cross_chain_access_sdk/: __init__.py
libs/cross_chain_access_sdk/cross_chain_access/: client.py  exceptions.py  models.py
libs/cross_chain_access_sdk/sdk/: client.py
libs/market_maker_sdk/: __init__.py
libs/market_maker_sdk/market_maker_web3/: __init__.py  client.py  constants.py  exceptions.py
libs/market_maker_sdk/rpq_service/: client.py  exceptions.py
libs/market_maker_sdk/sdk/: client.py
libs/trading_sdk/: __init__.py  routing.py
libs/trading_sdk/sdk/: __init__.py  client.py
swarm/: __init__.py
swarm/cross_chain_access_sdk/: __init__.py
swarm/cross_chain_access_sdk/cross_chain_access/: __init__.py  client.py
swarm/cross_chain_access_sdk/market_hours/: __init__.py  market_hours.py
swarm/cross_chain_access_sdk/sdk/: __init__.py  client.py
swarm/market_maker_sdk/: __init__.py
swarm/market_maker_sdk/market_maker_web3/: client.py  constants.py
swarm/market_maker_sdk/rpq_service/: __init__.py  client.py  models.py
swarm/market_maker_sdk/sdk/: __init__.py  client.py
swarm/shared/: __init__.py  base_client.py  config.py  models.py  remote_config.py  swarm_auth.py
swarm/shared/web3/: __init__.py  constants.py  helpers.py
swarm/trading_sdk/: exceptions.py  routing.py
swarm/trading_sdk/sdk/: client.py
