[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "swarm-collection"
version = "1.0.0b1"
description = "Unified SDK collection for trading Real World Assets across multiple platforms"
readme = {file = "README.md", content-type = "text/markdown"}
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "Swarm", email = "developers@swarm.com"}
]
maintainers = [
    {name = "Swarm", email = "developers@swarm.com"}
]
keywords = [
    "blockchain",
    "web3",
    "rwa",
    "real-world-assets",
    "trading",
    "defi",
    "ethereum",
    "polygon",
    "arbitrum",
    "optimism",
    "base",
    "market-maker",
    "cross-chain-access",
    "swarm",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Office/Business :: Financial",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Operating System :: OS Independent",
    "Typing :: Typed",
]
dependencies = [
    "web3>=6.0.0",
    "httpx>=0.24.0",
    "eth-account>=0.9.0",
    "pytz>=2023.3",
    "tenacity>=8.2.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.1.0",
    "black>=23.7.0",
    "flake8>=6.1.0",
    "mypy>=1.5.0",
    "isort>=5.12.0",
    "responses>=0.23.0",
    "pytest-mock>=3.11.0",
]
test = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.1.0",
]

[project.urls]
Homepage = "https://github.com/SwarmMarkets/python-swarm-sdks"
Documentation = "https://github.com/swarmmarkets/swarm-collection"
Repository = "https://github.com/SwarmMarkets/python-swarm-sdks"
"Bug Tracker" = "https://github.com/SwarmMarkets/python-swarm-sdks/issues"

[tool.setuptools]
package-dir = {"" = "libs"}
include-package-data = true
zip-safe = false

[tool.setuptools.packages.find]
where = ["libs"]
exclude = ["tests*", "examples*"]
include = ["market_maker_sdk*", "cross_chain_access_sdk*", "trading_sdk*", "_shared*"]

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-ra -q --strict-markers"
testpaths = ["tests"]
pythonpath = ["libs"]
asyncio_mode = "auto"

[tool.black]
line-length = 100
target-version = ["py38", "py39", "py310", "py311"]
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
line_length = 100
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
disallow_incomplete_defs = false
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
follow_imports = "normal"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "web3.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "eth_account.*"
ignore_missing_imports = true

[tool.coverage.run]
source = ["libs/_shared", "libs/market_maker_sdk", "libs/cross_chain_access_sdk", "libs/trading_sdk"]
omit = [
    "*/tests/*",
    "*/examples/*",
    "*/__pycache__/*",
    "*/.*",
]

[tool.coverage.report]
precision = 2
show_missing = true
skip_covered = false
